# tf2-web-server-manager

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  build.ps1  cabal.project  tf2-server-manager.cabal  tf2-web-server-manager.cabal
app/: LeEncoding.hs  Main.hs  Rcon.hs  SSHTunneling.hs  TransHelpers.hs
frontend/src/: Login.elm  Main.elm  Server.elm
frontend/static/: login.html  server.html
