cabal-version:      2.4
name:               tf2-server-manager
version:            1.0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Bernardo Gomes Negri
maintainer:         38192358+BernardoGomesNegri@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable tf2-server-manager
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Rcon
    other-modules: LeEncoding

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    build-depends: scotty
    build-depends: bytestring
    build-depends: network-simple
    build-depends: binary
    build-depends: utf8-string
    build-depends: random
    hs-source-dirs:   app
    default-language: Haskell2010
