cabal-version:      2.4
name:               tf2-server-manager
version:            1.3.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT
author: Bernardo Gomes Negri
maintainer: 8192358+BernardoGomesNegri@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

Flag debug {
    Description: faster compilation
    Manual: True
    Default: False
    }

executable tf2-server-manager
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Rcon
    other-modules: LeEncoding
    other-modules: TransHelpers

    if flag(debug)
         ghc-options: -O0 -cpp -pgmP cpphs
         cpp-options: --cpp -DDEBUG
    else
         ghc-options: -O2 -threaded -with-rtsopts=-N -cpp -pgmP cpphs
         cpp-options: --cpp
    -- LANGUAGE extensions used by modules in this package.
    other-extensions: CPP, DeriveGeneric
    build-depends: base >=4.14.3.0
    build-depends: scotty
    build-depends: bytestring
    build-depends: parsec
    build-depends: network-simple
    build-depends: binary
    build-depends: aeson
    build-depends: utf8-string
    build-depends: random
    build-depends: wai-extra
    build-depends: wai-middleware-static
    build-depends: containers
    build-depends: http-types
    build-depends: data-default-class
    build-depends: stm
    build-depends: mtl
    build-depends: text
    build-depends: transformers
    build-depends: cpphs
    hs-source-dirs:   app
    default-language: Haskell2010
